refactored, cleaned, added tables of content, and commented css, commented html and refactored some elements, refactored navbars and footer into partials, added gradient mixins

--- a/scss/core.scss
+++ b/scss/core.scss
@@ -1,4 +1,4 @@
-/*! core.scss | Cryptos | Kit 1 | CSS Ninja */
+/*! core.scss | Krypton | Kit 1 | CSS Ninja */
 
 /* ==========================================================================
 Kit 1 core 
@@ -8,7 +8,6 @@ Kit 1 core
 TABLE OF CONTENTS
 =============================================================================
 0. CSS Imports
-1. Resets and base setup
 =============================================================================
 ***/
 
@@ -29,3 +28,4 @@ TABLE OF CONTENTS
 @import 'partials/forms';
 @import 'partials/pageloader';
 @import 'partials/animations';
+@import 'partials/responsive';
