--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -1,7 +1,7 @@
-/*! _colors.scss | Cryptos | Kit 1 | CSS Ninja */
+/*! _colors.scss | Krypton | Kit 1 | CSS Ninja */
 
 /* ==========================================================================
-Cryptos global colors 
+Krypton global colors 
 ========================================================================== */
 
 /***
