--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,8 +1,26 @@
+/*! _footer.scss | Krypton | Kit 1 | CSS Ninja */
+
+/* ==========================================================================
+Footer styles
+========================================================================== */
+
+/***
+TABLE OF CONTENTS
+=============================================================================
+0. Krypton footer
+=============================================================================
+***/
+
+/* ==========================================================================
+0. Krypton footer
+========================================================================== */
+
 .krypton-footer {
     padding: 100px 40px;
     background: #0f0330;
     text-align: center;
     position: relative;
+    //Solar system background
     .solar-system {
         position: absolute;
         top: 0;
@@ -10,10 +28,12 @@
         max-width: 50%;
         z-index: 0;
     }
+    //Footer logo
     .footer-logo {
         img {
             height: 75px;
         }
+        //Brand
         .brand-name {
             font-family: 'Cabin', sans-serif;
             text-transform: uppercase;
@@ -23,6 +43,7 @@
             font-size: 1.4rem;
             letter-spacing: 3px;
         }
+        //Motto
         .brand-subtitle {
             font-family: 'Open Sans', sans-serif;
             text-transform: uppercase;
@@ -31,11 +52,14 @@
             color: $primary;
         }
     }
+    //Footer columns
     .footer-columns {
         padding: 40px 0;
         position: relative;
         z-index: 1;
+        //Subscribe form
         .subscribe-block {
+            //Title
             .subscribe-title {
                 padding: 10px 0;
                 font-family: 'Open Sans', sans-serif;
@@ -44,9 +68,11 @@
                 font-size: .55rem;
                 color: $secondary;
             }
+            //Form control
             .control {
                 position: relative;
                 width: 100%;
+                //Input
                 .krypton-subscribe-input {
                     height: 50px;
                     width: 100%;
@@ -65,15 +91,14 @@
                         box-shadow: 0 2px 3px 0 rgba(0,0,0,.5), 0 0 25px 0 rgba(18,60,255,.26) !important;
                     }
                 }
+                //Button
                 button {
                     display: block;
                     position: absolute;
                     right: 4px;
                     top: 5px;
                     color: $white;
-                    background: $secondary;
-                    background: -webkit-linear-gradient(to right, $secondary, $secondary-accent) !important;
-                    background: linear-gradient(to right, $secondary, $secondary-accent) !important; 
+                    @include secondary-gradient-right();
                     border: none;
                     height: 40px;
                     padding: 0 26px;
@@ -92,10 +117,12 @@
                 }
             }
         }
+        //Navigation links
         .footer-links {
             display: flex;
             justify-content: space-around;
             align-items: center;
+            //Link element
             li {
                 a {
                     position: relative;
@@ -126,6 +153,7 @@
                         transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
                         transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
                     }
+                    //Hover state
                     &:hover {
                         &:before {
                             -webkit-transform-origin: left center;
@@ -140,7 +168,7 @@
             }
         }
     }
-
+    //Copyright section
     .k-copyright {
         position: relative;
         color: $primary;
@@ -148,6 +176,7 @@
         font-size: .85rem;
         z-index: 2;
     }
+    //Coded by section
     .coded-by {
         position: relative;
         color: $white;
