--- a/scss/partials/_pageloader.scss
+++ b/scss/partials/_pageloader.scss
@@ -1,4 +1,4 @@
-/*! _pageloader.scss | Helios | CSS Ninja */
+/*! _pageloader.scss | Krypton | CSS Ninja */
 
 /* ==========================================================================
 Pageloader styles
@@ -37,7 +37,7 @@ TABLE OF CONTENTS
         -webkit-transform: translateX(0);
         transform: translateX(0);
     }
-    &.is-demo {
+    &.is-theme {
         background-image: linear-gradient(to bottom, #22005b 0%, #161a31 100%) !important;
     }
 
