--- a/html/layouts/default.html
+++ b/html/layouts/default.html
@@ -9,7 +9,6 @@
         <title> Krypton :: {{title}}</title>
         <link rel="icon" type="image/png" href="assets/images/favicon.png" />
         
-        <!--link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600" rel="stylesheet"-->
         <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 
@@ -22,7 +21,9 @@
 
     </head>
     <body>
+        {{> pageloader}}
         {{> body}}
+        {{> footer}}
         {{> scripts}}
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
