--- a/scss/partials/_features.scss
+++ b/scss/partials/_features.scss
@@ -1,10 +1,29 @@
+/*! _features.scss | Krypton | Kit 1 | CSS Ninja */
+
+/* ==========================================================================
+Features elements styles
+========================================================================== */
+
+/***
+TABLE OF CONTENTS
+=============================================================================
+0. Video pulsating button
+1. Icon box features
+2. Side features
+3. Flying tabs
+4. Countdown
+=============================================================================
+***/
+
+/* ==========================================================================
+0. Video pulsating button
+========================================================================== */
+
 .video-button {
     position: relative;
     height: 54px;
     width: 54px;
-    background: $secondary;
-    background: -webkit-linear-gradient(to right, $secondary, $secondary-accent) !important;
-    background: linear-gradient(to right, $secondary, $secondary-accent) !important; 
+    @include secondary-gradient-right();
     border-radius: 50%;
     margin: 0 auto;
     display: flex;
@@ -12,6 +31,7 @@
     align-items: center;
     z-index: 2;
     cursor: pointer;
+    //Play icon
     img {
         position: relative;
         display: block;
@@ -20,6 +40,7 @@
         left: 2px;
         z-index: 3;
     }
+    //Pulsating pseudo element
     &:after {
         content: '';
         position: absolute;
@@ -28,9 +49,7 @@
         height: 24px;
         width: 24px;
         border-radius: 50%;
-        background: $secondary;
-        background: -webkit-linear-gradient(to right, $secondary, $secondary-accent) !important;
-        background: linear-gradient(to right, $secondary, $secondary-accent) !important; 
+        @include secondary-gradient-right(); 
         animation: pulse 1.6s infinite;
         animation-duration: 2s;
         transform-origin: center center ;
@@ -39,21 +58,9 @@
 }
 
 
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    25% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(4.5);
-        opacity: 0;
-    }
-}
-
+/* ==========================================================================
+1. Icon box features
+========================================================================== */
 
 .feature {
     text-align: center;
@@ -68,34 +75,50 @@
     }
 }
 
+/* ==========================================================================
+2. Side features
+========================================================================== */
+
+//Featured image
 .side-feature {
     max-height: 500px;
 }
 
+//Feature content
 .side-feature-content {
+    //icon
     img {
         max-height: 50px;
         width: 50px;
-        //display: block;
     }
+    //paragraph
     p {
+        //light modifier
         &.is-light {
             color: $white;
         }
+        //light blue modifier
         &.is-light-blue {
             color: #d5ebff;
         }
     }
+    //title
     h3 span {
         padding: 0 10px;
     }
 }
 
+/* ==========================================================================
+3. Flying tabs
+========================================================================== */
 
+//Container
 .flying-tabs-container {
     max-width: 560px;
     margin: 0 auto;
+    //tabs
     .flying-tabs {
+        //tab-item
         li {
             display: inline;
             text-align: center;
@@ -103,7 +126,7 @@
                 color: $white !important;
             }
         }
-
+        //link element
         a {
             font-family: 'Cabin', sans-serif;
             display: inline-block;
@@ -116,7 +139,7 @@
                 color: lighten(#1e004f, 15%);
             }
         }
-
+        //Settings for underline
         .tab-1.is-active {
             margin: 0;
         }
@@ -132,53 +155,42 @@
         .tab-4.is-active ~ hr {
             margin-left: 75%;
         }
-
-        /*.two:hover ~ hr {
-        margin-left: 25%;
-    }
-
-        .three:hover ~ hr {
-        margin-left: 50%;
-    }
-
-        .four:hover ~ hr {
-        margin-left: 75%;
-    }*/
-
+        //Flying underline
         hr {
             height: 2px;
             border-radius: 10px;
             width: 25%;
             margin: 0;
-            background: #7f00ff;  /* fallback for old browsers */
-            background: -webkit-linear-gradient(to top, #7f00ff, #3f00fc) !important;  /* Chrome 10-25, Safari 5.1-6 */
-            background: linear-gradient(to top, #7f00ff, #3f00fc) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            @include primary-gradient-top();
             border: none;
             transition: .3s ease-in-out;
         }
     }
 }
 
+//Tab content
 .tab-content {
     display: none;
     min-height: 312px;
     margin-top: 40px;
+    //Active state
     &.is-active {
         display: block;
     }
+    //Side image
     img {
         height: 320px;
         animation-delay: .3s;
     }
+    //Countdown card
     .ico-card {
         width: 100%;
-        background: #7f00ff;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #7f00ff, #3f00fc) !important;  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #7f00ff, #3f00fc) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        @include primary-gradient-right();
         color: $white;
         padding: 20px 40px;
         border-radius: 6px;
         animation-delay: .3s;
+        //Progress bar
         .progress-block {
             .progress-tags {
                 display: flex;
@@ -208,31 +220,28 @@
                     }
                 }
             }
+            //Color
             progress {
                 &.ico-progress {
                     &::-webkit-progress-value {
-                        background: #00ff99;  /* fallback for old browsers */
-                        background: -webkit-linear-gradient(to right, #00ff99, #33ccff) !important;  /* Chrome 10-25, Safari 5.1-6 */
-                        background: linear-gradient(to right, #00ff99, #33ccff) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                        @include secondary-gradient-right();
                     }
                     &::-moz-progress-bar {
-                        background: #00ff99;  /* fallback for old browsers */
-                        background: -webkit-linear-gradient(to right, #00ff99, #33ccff) !important;  /* Chrome 10-25, Safari 5.1-6 */
-                        background: linear-gradient(to right, #00ff99, #33ccff) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                        @include secondary-gradient-right();
                     }
                     &::-ms-fill {
-                        background: #00ff99;  /* fallback for old browsers */
-                        background: -webkit-linear-gradient(to right, #00ff99, #33ccff) !important;  /* Chrome 10-25, Safari 5.1-6 */
-                        background: linear-gradient(to right, #00ff99, #33ccff) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                        @include secondary-gradient-right();
                     }
                 }
             }
         }
+        //Button
         .button-block {
             text-align: center;
             margin: 20px 0 10px 0;
             padding: 0 15%;
         }
+        //Icons
         .icon-block {
             display: flex;
             justify-content: center;
@@ -244,13 +253,12 @@
             }
         }
     }
+    //Text content
     .text-content {
-        h4 {
-
-        }
         p {
             animation-delay: .15s;
         }
+        //Bullet list
         .custom-bullet-list {
             li::before {
                 content: "೦ ";
@@ -288,34 +296,35 @@
 }
 
 
-//countdown
+/* ==========================================================================
+4. Countdown
+========================================================================== */
+
 ul#countdown {
     position: relative;
-    //top: 50%;
-    //transform: translateY(-50%);
-    //width: 50%;
     margin: 10px auto;
     padding: 0 10px;
     color: #fff;
-    //border: 1px solid #adafb2;
     border-width: 1px 0;
     overflow: hidden;
     font-family: 'Arial Narrow', Arial, sans-serif;
     font-weight: 500;
-
+    //Left pulled
     &.is-pulled-left {
         left: -10%;
     }
+    //Modified for ICO card
     &.is-ico {
         .label {
             color: #f9f9f9;
             font-size: 10px;
         }
     }
+    //Numbers
     .number {
         background-color: none !important;
     }
-
+    //List element
     li {
         position: relative;
         margin: 0 -3px 0 0;
@@ -323,25 +332,25 @@ ul#countdown {
         display: inline-block;
         width: 25%;
         font-size: 30px;
-        //font-size: 6vw;
         text-align: center;
+        //semicolumn pseudo element
         &:after {
             content: ':';
             position: absolute;
             top: 0;
             right: 0;
         }
+        //Removing semicolumn for last element
         &:last-child {
             &:after {
                 content: '';
             }
         }
-
+        //Label
         .label {
             color: #adafb2;
             font-size: 12px;
             font-weight: 400;
-            //font-size: 1.5vw;
             text-transform: uppercase;
         }
     }
