--- a/scss/partials/_forms.scss
+++ b/scss/partials/_forms.scss
@@ -1,5 +1,19 @@
+/*! _forms.scss | Krypton | Kit 1 | CSS Ninja */
+
 /* ==========================================================================
-6. Material Inputs
+Form components styles
+========================================================================== */
+
+/***
+TABLE OF CONTENTS
+=============================================================================
+0. Material Inputs
+1. Contact form
+=============================================================================
+***/
+
+/* ==========================================================================
+0. Material Inputs
 ========================================================================== */
 
 //Material control
@@ -14,12 +28,17 @@
     //primary colors
     &.is-primary {
         input.material-input:focus ~ label, input:valid ~ label, textarea:focus ~ label {
-            color: $white;
+            color: $primary;
         }
-        .bar:before, .bar:after {
-            background: $primary;
-            background: -webkit-linear-gradient(to right, $primary, $primary-accent) !important;
-            background: linear-gradient(to right, $primary, $primary-accent) !important;
+        input, textarea {
+            color: $white;
+            border-bottom: 1px solid rgba(255,255,255,0.2) !important;
+        }
+        .bar:before {
+            @include primary-gradient-right();
+        }
+        .bar:after {
+            @include primary-gradient-left();
         }
         &.has-icon input:focus ~ i {
             color: $primary !important;
@@ -30,36 +49,21 @@
         input.material-input:focus ~ label, input:valid ~ label, textarea:focus ~ label {
             color: $secondary;
         }
-        input {
+        input, textarea {
             color: $white;
+            border-bottom: 1px solid rgba(255,255,255,0.2) !important;
         }
         .bar:before {
-            background: $secondary;
-            background: -webkit-linear-gradient(to right, $secondary, $secondary-accent) !important;
-            background: linear-gradient(to right, $secondary, $secondary-accent) !important; 
+            @include secondary-gradient-right();
         }
         .bar:after {
-            background: $secondary;
-            background: -webkit-linear-gradient(to left, $secondary, $secondary-accent) !important;
-            background: linear-gradient(to left, $secondary, $secondary-accent) !important; 
+            @include secondary-gradient-left();
         }
         &.has-icon input:focus ~ i {
             color: $secondary !important;
         }
     }
-    //light colors
-    &.is-light {
-        input.material-input:focus ~ label, input:valid ~ label, textarea:focus ~ label {
-            color: $white;
-        }
-        .bar:before, .bar:after {
-            background: $white;
-        }
-        &.has-icon input:focus ~ i {
-            color: $white !important;
-        }
-    }
-    //baisc material styles
+    //Common material styles
     input.material-input, textarea {
         width: 100% !important;
         font-size:18px;
@@ -118,91 +122,24 @@
     input.material-input:focus ~ .bar:before, input.material-input:focus ~ .bar:after, textarea:focus ~ .bar:before, textarea:focus ~ .bar:after {
         width:50%;
     }
-    //with icon
-    &.has-icon {
-        input {
-            padding-right: 25px;
-        }
-        position: relative;
-        i {
-            position: absolute;
-            right: 15px;
-            top: 12px;
-            color: $placeholder;
-        }
-    }
-    //validation
-    &.required {
-        input {
-            padding-right: 25px;
-        }
-        position: relative;
-        i {
-            position: absolute;
-            right: 15px;
-            top: 8px;
-            color: $placeholder; 
-            display: none;
-        }
-        small.validation-info {
-            display: none;
-            font-size: 0.8rem;
-        }
-        //success state
-        &.has-success {
-            input {
-                border-bottom-color: $green !important;
-            }
-            .bar:after, .bar:before {
-                background: $green !important;
-            }
-            .success i {
-                color: $green !important;
-                display: block;
-            }
-            label {
-                color: $green !important;
-            }
-            small.validation-info.success {
-                color: $green;
-                display: block;
-            }
-        }
-        //error state
-        &.has-error {
-            input {
-                border-bottom-color: $red !important;
-            }
-            .bar:after, .bar:before {
-                background: $red !important;
-            }
-            .error i {
-                color: $red !important;
-                display: block;
-            }
-            label {
-                color: $red !important;
-            }
-            small.validation-info.error {
-                color: $red;
-                display: block;
-            }
-        }
-    }
 }
 
+//Input and textareas text colors
 .control-material textarea {
     color: $white;
 }
 
 
+/* ==========================================================================
+1. Contact form
+========================================================================== */
 
-//COntact icons
-
+//Wrapper
 .contact-icons {
     display: flex;
     justify-content: center;
     align-items: center;
+    //Icon
     .contact-icon {
         position: relative;
         height: 54px;
@@ -217,6 +154,7 @@
         align-items: center;
         z-index: 2;
         cursor: pointer;
+        //Inner image
         img {
             position: absolute;
             display: block;
@@ -224,11 +162,13 @@
             height: 24px;
             //left: 2px;
             z-index: 3;
+            //Telegram icon position
             &.is-telegram {
                 top: calc(50% - 12px);
                 left: calc(50% - 14px);
             }
         }
+        //Pseudo pulsating element
         &:after {
             content: '';
             position: absolute;
@@ -249,22 +189,7 @@
     }
 }
 
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    25% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(4.5);
-        opacity: 0;
-    }
-}
-
-
+//Contact form spacing
 .contact-form {
     margin-top: 40px;
 }
